--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
       "!**/external/**",
       "!**/fixtures/**",
       "!**/lcov-report/**"
-    ]
+    ],
+    "reporters": [ "default", [ "./node_modules/jest-html-reporter", { "pageTitle": "Test Report" } ] ] 
   },
   "type": "module",
   "dependencies": {
